tests/parser/syntax-errors/variable_defined_later/variable_defined_later.choc
# RUN: choco-opt "%s" | filecheck "%s"

a : int = 0
a = 1
b : int = 1

# CHECK:      SyntaxError (line 5, column 3): Variable declaration after non-declaration statement.
# CHECK-NEXT: >>>b : int = 1
# CHECK-NEXT: >>>--^
